# my-app

./: .gitignore  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  prod-backend-deploy.yml
docs/: deployment.md  get-started.md
fastapi-backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh  watcher.py
fastapi_backend/: .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  start.sh  watcher.py
fastapi_backend/alembic/: env.py
fastapi_backend/alembic_migrations/: env.py
fastapi_backend/alembic_migrations/versions/: b389592974f8_add_item_model.py
fastapi_backend/app/: config.py  database.py  main.py  schemas.py  watcher.py
fastapi_backend/app/alembic/: env.py
fastapi_backend/app/commands/: generate_openapi_schema.py
fastapi_backend/app/routes/: items.py  user_dashboard.py
fastapi_backend/app/src/: config.py  database.py  email.py
fastapi_backend/app/tests/: conftest.py
fastapi_backend/app/tests/commands/: test_generate_openapi_schema.py
fastapi_backend/app/tests/main/: test_main.py
fastapi_backend/app/tests/utils/: test_utils.py
fastapi_backend/src/: users.py
fastapi_backend/tests/: conftest.py  test_email.py
fastapi_backend/tests/commands/: test_generate_openapi_schema.py
fastapi_backend/tests/main/: test_main.py
fastapi_backend/tests/routes/: test_items.py
fastapi_backend/tests/utils/: test_utils.py
local-shared-data/: openapi.json
nextjs-frontend/: .env.local.example  .gitignore  (+14 more)
(+59 files in other folders)
