[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Anderson Resende <anderson@vinta.com.br>"]
readme = "README.md"
package-mode = false
packages = [{include = "commands"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
pydantic-settings = "^2.5.2"
fastapi-mail = "^1.4.1"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.1.0"
watchdog = "^5.0.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
